// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SuggestionList > renders duplicate suggestions 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2 p-3"
  >
    <div
      class="
            w-full group relative overflow-hidden
            bg-surface border rounded-lg transition-all duration-200
            hover:border-action hover:bg-surface-highlight border-border-subtle
        "
    >
      <button
        aria-busy="false"
        aria-label="Clean "Original": Close 1 duplicate tab. Apply suggestion."
        class="w-full text-left flex items-center gap-2 p-2 cursor-pointer focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-action focus-visible:ring-inset"
        type="button"
      >
        <div
          class="
                    p-1.5 rounded-md shrink-0
                    bg-rose-500/10 text-rose-500
                "
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-trash2 lucide-trash-2 w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 11v6"
            />
            <path
              d="M14 11v6"
            />
            <path
              d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
            />
            <path
              d="M3 6h18"
            />
            <path
              d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
            />
          </svg>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <h3
            class="font-medium text-main truncate text-sm leading-tight"
          >
            Clean "Original"
          </h3>
          <p
            class="text-[10px] text-muted truncate leading-tight"
          >
            Close 1 duplicate tab
          </p>
        </div>
        <div
          class="
                    flex items-center gap-1.5 px-2 py-1 rounded-full transition-all duration-200
                    text-muted group-hover:text-action group-hover:bg-action/10
                    
                "
        >
          <span
            class="text-[10px] font-semibold uppercase tracking-wide opacity-0 w-0 group-hover:w-auto group-hover:opacity-100 transition-all duration-200 overflow-hidden whitespace-nowrap"
          >
            Apply
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right w-3.5 h-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
        </div>
      </button>
      <div
        class="px-2 pb-2 pl-9 space-y-0.5"
      >
        <div
          class="flex items-center gap-2 overflow-hidden opacity-80"
        >
          <div
            class="w-2 h-2 rounded-full bg-border-strong shrink-0"
          />
          <span
            class="truncate text-[11px] text-muted leading-tight flex-1"
          >
            Copy
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SuggestionList > renders empty state when no suggestions 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center p-8 text-center h-full"
  >
    <div
      class="w-12 h-12 bg-surface-highlight rounded-full flex items-center justify-center mb-4"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-sparkles w-6 h-6 text-muted"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
        />
        <path
          d="M20 2v4"
        />
        <path
          d="M22 4h-4"
        />
        <circle
          cx="4"
          cy="20"
          r="2"
        />
      </svg>
    </div>
    <h3
      class="text-main font-medium mb-1"
    >
      All Caught Up
    </h3>
    <p
      class="text-muted text-sm"
    >
      No organization suggestions at the moment.
    </p>
  </div>
</DocumentFragment>
`;

exports[`SuggestionList > renders grouping suggestions 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2 p-3"
  >
    <div
      class="
            w-full group relative overflow-hidden
            bg-surface border rounded-lg transition-all duration-200
            hover:border-action hover:bg-surface-highlight border-border-subtle
        "
    >
      <button
        aria-busy="false"
        aria-label="Group "Work": Organize 2 tabs. Apply suggestion."
        class="w-full text-left flex items-center gap-2 p-2 cursor-pointer focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-action focus-visible:ring-inset"
        type="button"
      >
        <div
          class="
                    p-1.5 rounded-md shrink-0
                    bg-indigo-500/10 text-indigo-500
                "
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-group w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 7V5c0-1.1.9-2 2-2h2"
            />
            <path
              d="M17 3h2c1.1 0 2 .9 2 2v2"
            />
            <path
              d="M21 17v2c0 1.1-.9 2-2 2h-2"
            />
            <path
              d="M7 21H5c-1.1 0-2-.9-2-2v-2"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="7"
              y="7"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="10"
              y="12"
            />
          </svg>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <h3
            class="font-medium text-main truncate text-sm leading-tight"
          >
            Group "Work"
          </h3>
          <p
            class="text-[10px] text-muted truncate leading-tight"
          >
            Organize 2 tabs
          </p>
        </div>
        <div
          class="
                    flex items-center gap-1.5 px-2 py-1 rounded-full transition-all duration-200
                    text-muted group-hover:text-action group-hover:bg-action/10
                    
                "
        >
          <span
            class="text-[10px] font-semibold uppercase tracking-wide opacity-0 w-0 group-hover:w-auto group-hover:opacity-100 transition-all duration-200 overflow-hidden whitespace-nowrap"
          >
            Apply
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-right w-3.5 h-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
        </div>
      </button>
      <div
        class="px-2 pb-2 pl-9 space-y-0.5"
      >
        <div
          class="flex items-center gap-2 overflow-hidden opacity-80"
        >
          <div
            class="w-2 h-2 rounded-full bg-border-strong shrink-0"
          />
          <span
            class="truncate text-[11px] text-muted leading-tight flex-1"
          >
            Tab 1
          </span>
        </div>
        <div
          class="flex items-center gap-2 overflow-hidden opacity-80"
        >
          <div
            class="w-2 h-2 rounded-full bg-border-strong shrink-0"
          />
          <span
            class="truncate text-[11px] text-muted leading-tight flex-1"
          >
            Tab 2
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SuggestionList > renders loading state when processing in background 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center p-8 text-center h-full animate-pulse"
  >
    <div
      class="w-12 h-12 bg-surface-highlight rounded-full flex items-center justify-center mb-4"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-loader-circle w-6 h-6 text-action animate-spin"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12a9 9 0 1 1-6.219-8.56"
        />
      </svg>
    </div>
    <h3
      class="text-main font-medium mb-1"
    >
      Scanning Tabs...
    </h3>
    <p
      class="text-muted text-sm"
    >
      Looking for ways to organize your workspace.
    </p>
  </div>
</DocumentFragment>
`;
